# protobuf-c

./: BUILD.bazel  WORKSPACE
bazel/: protobuf-c.bzl  utils.bzl
