
load("@com_github_protobuf_c//:bazel/protobuf-c.bzl", "c_proto_library")
load("@com_github_protobuf_c//:bazel/utils.bzl", "source_files")


source_files(
    name = "protobuf-c-srcs",
    srcs = glob(["protobuf-c/*.c"]),
)

source_files(
    name = "protobuf-c-hdrs",
    srcs = glob(["protobuf-c/*.h"]),
)


cc_library(
    name = "protobuf-c",
    visibility = ["//visibility:public"],
    srcs = [":protobuf-c-srcs"],
    hdrs = [":protobuf-c-hdrs"],
    defines = [
         "PACKAGE_STRING='\"protoc-c\"'",
    ],
    includes = ["src", "src/protobuf-c"],
)

source_files(
    name = "protoc-c-lib-srcs",
    srcs = glob(["protoc-c/*.cc", "protoc-c/*.h"]),
)

cc_library(
    name = "protoc-c-lib",
    srcs = [":protoc-c-lib-srcs"],
    includes = ["src/"],
    deps = [
        "@com_google_protobuf//:protoc_lib",
        ":protobuf-c"]
)

cc_binary(
    name = "protoc-gen-c",
    visibility = ["//visibility:public"],
    srcs = ["protoc-c/main.cc"],
    deps = [":protoc-c-lib"],
)

# The protoc-gen-c binary behaves like a protoc plugin, while the protoc-c
# binary behaves like protoc itself. It's the same binary that changes its
# behaviour according to the file name, that's why we generate two binaries
# that differ only in the name.
cc_binary(
    name = "protoc-c",
    visibility = ["//visibility:public"],
    srcs = ["protoc-c/main.cc"],
    deps = [":protoc-c-lib"],
)
